--- a/drivers/staging/qcacld-3.0/Kbuild
+++ b/drivers/staging/qcacld-3.0/Kbuild
@@ -3334,6 +3334,7 @@ ccflags-y += -Wframe-larger-than=4096
 endif
 endif
 ccflags-y += -Wmissing-prototypes
+ccflags-y += -g0
 
 ifeq ($(call cc-option-yn, -Wheader-guard), y)
 ccflags-y += -Wheader-guard
@@ -3387,6 +3388,8 @@ else
 	ccflags-y += -DWLAN_HOST_ARCH_ARM=1
 	ccflags-y += -Wno-strict-prototypes
 endif
+
+ccflags-y += $(call cc-option, -g0)
 
 # inject some build related information
 ifeq ($(CONFIG_BUILD_TAG), y)
