--- a/arch/arm64/configs/enchilada_defconfig
+++ b/arch/arm64/configs/enchilada_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-perf-snnbyyds"
+CONFIG_LOCALVERSION="-perf-sn-uotan"
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
